Sistemato l'apicetto per il prime uniformato il codice di umberto (filiformi.tex) al nostro stile ora sistemo codice di umberto con equation

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -168,7 +168,7 @@
 		\vspace{0.5cm}
 		\emph{written with love by} \\
 		\vspace{0.5cm}
-		{\Large Andrea Pittaro0, Enrico Lovisotto, Umberto Martinelli}
+		{\Large Andrea Pittaro, Enrico Lovisotto, Umberto Martinelli}
 	\end{center}
 
 	\vfill
@@ -187,6 +187,7 @@
 \input{polarizzazione.tex}
 \input{onde_piane.tex}
 \input{antenne_cap.tex}
+\input{filiformi.tex}
 \input{array.tex}
 \input{patch.tex}
 \end{document}
