Sistemata parte di umberto fino a dipolo corto escluso sistemati gli apici

--- a/antenne/antenne_cap.tex
+++ b/antenne/antenne_cap.tex
@@ -460,6 +460,7 @@ Definiamo ora il coefficiente di riflessione della linea:
 \begin{equation}
   \rho = \frac{Z_A -Z_C}{Z_A + Z_C}
 \end{equation}
+dove $Z_A$ è l'impedenza d'antenna e $Z_C$ è l'impedenza caratteristica
 Nel caso del dipolo elementare, dato che la reattanza è molto maggiore della resistenza e quest'ultima è molto piccola, possiamo scrivere:
 \begin{esp*}
   |\rho| &\approx \frac{|\jmath \Chi_A -Z_C|}{|\jmath \Chi_A +Z_C|}\approx 1 \\
