--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -265,7 +265,7 @@ Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno pr
 		&A_{x^{\prime}} ~ B_{x^{\prime}}^x + A_{y^{\prime}} ~ B_{y^{\prime}}^x = 0 \\
 		&p_A^{\prime} = \jmath \frac{ A_{x^{\prime}} } { A_{y^{\prime}} }
 			= - \jmath \frac{ B_{y^{\prime}} } { B_{x^{\prime}} }
-			= \frac{1} {\jmath \frac{ B_{y^{\prime}} } { B_{x^{\prime}} }} = \frac{1}{-p_B^*^{\prime}}
+			= \frac{1} {\jmath \frac{ B_{y^{\prime}} } { B_{x^{\prime}} }} = \frac{1}{-p_B^{* \prime}}
 	\end{esp}
 
 \section{Potenza dell'onda elettromagnetica}
