--- a/antenne/filiformi.tex
+++ b/antenne/filiformi.tex
@@ -1,52 +1,67 @@
-\chapter{ANTENNE FILIFORMI}
+\chapter{Antenne filiformi}
+Dato $V^{\prime}$ il volume delle sorgenti, definiamo la
+distribuzione di corrente come
+\begin{equation}
+  \vec{J}(\vec{r^{\prime}})$ $\forall \vec{r^{\prime}}\in V^{\prime}
+\end{equation}
+Otteniamo quindi che il potenziale vettore magnetico risulta:
+\begin{esp*}
+  \vec{A}(\vec{r^{\prime}}) = \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{V^{\prime}} \vec{J}(\vec{r^{\prime}})e^{\jmath\beta r^{\prime}\cos (\Psi (\vec{r^{\prime}}))}d\vec{r^{\prime}}
+\end{esp*}
 
-Distribuzione di corrente : $\vec{J}(\vec{r^{\prime}})$ $\forall \vec{r^{\prime}}\in V^{\prime}$ (con V^{\prime} volume delle sorgenti)
+\section{Antenne rettilinee}
+Data l'equazione di propagazione di un'onda di tensione lungo una linea di trasmissione
+\begin{esp}\begin{cases}
+  V(z^{\prime})=V_+ e^{-\jmath\beta z^{\prime}} + V_- e^{\jmath\beta z^{\prime}}\\
+  I(z^{\prime})=I_+ e^{-\jmath\beta z^{\prime}} - I_- e^{\jmath\beta z^{\prime}}
+\end{cases}\end{esp}
+Possiamo vedere il carico $Z_L$ come un'impedenza puramente reale e infinita. In tal caso l'estremità della linea è un circuito aperto, ma il campo non si propaga in quanto il campo elettomagnetico si annulla in quanto le linee di campo uscenti da un filo rientrano nell'altro. Se però apriamo i due fili, il campo elettromagnetico non rimane confinato, ma si propagherà.
 
-$\vec{A}(\vec{r^{\prime}}) = \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{V^{\prime}} \vec{J}(\vec{r^{\prime}})e^{\jmath\beta r^{\prime}\cos \Psi (\vec{r^{\prime}})}d\vec{r^{\prime}}$
+Possiamo notare l'analogia tra la tensione della linea: $V_+$ è l'onda trasmessa e $V_-$ quella riflessa con l'equazione per le onde piane.
 
-con $M(\theta,\phi) = \vec{J}(\vec{r^{\prime}})e^{\jmath\beta r^{\prime}\cos \Psi (\vec{r^{\prime}})}$ definito come  \textit{momento di dipolo}.
+Nel caso di circuito aperto ($Z_L \to +\infty$) il coefficiente di riflessione risulta  $\rho = 1$.
+La corrente lungo la linea risulta:
+\begin{esp}\label{eq:I_fili}
+  I(z^{\prime}) &= I_+(e^{-\jmath\beta z^{\prime}} - e^{\jmath\beta z^{\prime}}) = -2j I_+ \sin (\beta z^{\prime}) \\
+  I(-L^{\prime})&=  I_A = +2j I_+ \sin (\beta L^{\prime}) \\
+  \implies & I_+ = \frac{I_A}{+2\jmath\sin (\beta L^{\prime})}\\
+  \implies & I(z^{\prime}) - \frac{I_A\cdot \sin (\beta z^{\prime})}{\sin (\beta L^{\prime})}  = - I_m \sin (\beta z^{\prime})
+\end{esp}
 
-\section{ANTENNE RETTILINEE}
+con $I_m = \frac{I_A}{\sin (\beta L^{\prime})}$\\
+Calcolando le correnti nei diversi punti dei due fili aperti, otteniamo le relazioni tra $z$ e $z^{\prime}$
+\begin{esp}&(1) \quad z \ge 0  \begin{cases}
+  z^{\prime} = z-L^{\prime} \implies z = 0 \\
+  z^{\prime} = 0 \implies z = L^{\prime} \\
+\end{cases} \\
+&(2) \quad z \le 0 \begin{cases}
+z^{\prime} = -L^{\prime} \implies z = 0\\
+z^{\prime} = 0 \implies z = -L^{\prime}
+\end{cases}
+\end{esp}
 
-"Apro" le due estremità di un cavo alimentato.
+Possiamo quindi dividere i due casi $(1)$ e $(2)$ nel seguente modo:
+\begin{itemize}
+  \item in $(1)$  possiamo scrivere l'equivalenza $z^{\prime} = z-L^{\prime}$
+  \item in $(2)$  possiamo scrivere l'equivalenza $z^{\prime} = -z-L^{\prime}$
+\end{itemize}
+Ora possiamo scrivere una sola equazione, utilizzando questa sostituzione:
+\begin{equation}
+ \forall z \in [-L^{\prime};L^{\prime}] \implies z^{\prime} = \left | z \right | - L^{\prime}
+\end{equation}
 
-$V(z^{\prime})=V_+ e^{-\jmath\beta z^{\prime}} + V_- e^{\jmath\beta z^{\prime}}$, simile a onde piane $(V_+ trasmessa e V_- riflessa)$.
+L'equazione \eqref{eq:I_fili} si può quindi riscrivere come:
+\begin{equation}
+  I(z)=-I_m sin \left[sin(\beta \cdot (|z| - L^{\prime}))\right] = I_m sin \left[sin\left(\beta \frac{L}{2}-\beta |z|\right)\right] ~ |z| \le \frac{L}{2}
+\end{equation}
 
-$I(z^{\prime})=I_+ e^{-\jmath\beta z^{\prime}} - I_- e^{\jmath\beta z^{\prime}}$, con il meno tra le due correnti poichè il campo magnetico si gira quando viene riflesso.
+L'impedenza dell'antenna risulta quindi
+\begin{equation}
+  Z(z^{\prime}) = \frac{V(z^{\prime})}{I(z^{\prime})} \propto \jmath ctg( \beta z^{\prime})
+\end{equation}
+Che risulta essere sempre immaginaria. Poiché  non esiste alcuna impedenza puramente immaginaria nei casi reali, abbiamo commesso qualche errore di approssimazione. Normalmente si cerca di minimizzare il più possibile la resistenza nei fili che la compongono utilizzando materiali il più possibile conduttori
 
-$V_- = \rho V_+$ con $\rho$ definito \textit{coefficiente di riflessione} (z^{\prime}= 0)
-
-$\implies \rho = \frac{Z_L - z_C}{Z_L + Z_C}$
-
-$Z_L$ : impedenza al termine della linea $\implies Z_L = \frac{V_-}{I}$
-
-$Z_C$ : impedenza caratteristica della linea $\implies Z_C = \frac{V_+}{I_+}$
-
-Nel nostro caso $Z_L$ $\to +\infty$ (circuito aperto)  $\longrightarrow \rho = 1$
-
-quindi $I(z^{\prime}) = I_+(e^{-\jmath\beta z^{\prime}} - e^{\jmath\beta z^{\prime}}) = -2j I_+ \sin (\beta z^{\prime})$ con $\beta = \frac{2 \pi}{\lambda}$
-
-$I(z^{\prime} = -L^{\prime}) = I_A = +2j I_+ \sin (\beta L^{\prime}) \to I_+ = \frac{I_A}{+2j I_+ \sin (\beta L^{\prime})} $
-
-$I'(z^{\prime}) =  -2j \frac{I_A}{+2j \sin (\beta L^{\prime})} \sin (\beta z^{\prime}) = - \frac{I_A}{I_+ \sin (\beta L^{\prime})} \sin (\beta z^{\prime}) = - I_m \sin (\beta z^{\prime}) $ con $I_m = \frac{I_A}{\sin (\beta L^{\prime})}$
-
-$z \ge 0,  z^{\prime} = z-L^{\prime} \begin{cases} z = 0 \to z^{\prime} = L^{\prime}\\ z^{\prime} = L^{\prime} \to z = 0\\ \end{cases}$
-\hfill
-$z \le 0,  z^{\prime} = -z-L^{\prime} \begin{cases} z^{\prime} = -L^{\prime} \to z = 0\\ z^{\prime} = 0 \to z = -L^{\prime}\\ \end{cases}$
-
-$\forall \left | z \right | < L^{\prime} \to  z^{\prime} = \left | z \right | - L^{\prime}$
-
-$I(z) = - I_m \sin [\beta (\left | z \right | - L^{\prime})] = I_m \sin [\beta (L^{\prime} - \left | z \right |)]$
-
-...PDF con campi elettrici e magnetici...
-
-$Z(z^{\prime}) = \frac{V(z^{\prime})}{I(z^{\prime})} \propto j \cot \beta z^{\prime} \to$ immaginaria pura!
-
-se L = 2L^{\prime} $\implies I(z) = I_m \sin [\beta (\frac{L}{2} - \left | z \right |)]$ con $\left | z \right | \le \frac{L}{2}$ e $I_m = \frac{I_A}{\sin (\frac{\beta L}{2})}$
-
-\clearpage
-
-\section{DIPOLO CORTO (ANTENNA CORTA)}
+\section{Dipolo corto (o antenna corta)}
 Ipotesi : $\beta L << 1$ , $\frac{2 \pi}{\lambda}L << 1$ , $L << \frac{\lambda}{2 \pi}$
 
 $I(z) = I_m \sin [\beta (\frac{L}{2} - \left | z \right |)] \cong I_m \beta (\frac{L}{2} - \left | z \right |) \cong \frac{I_A}{\frac{\beta L}{2}} \beta (\frac{L}{2} - \left | z \right |) \cong I_A(1-\frac{2 \left | z \right |}{L}) $
@@ -61,10 +76,3 @@ DIPOLO CORTO : $\vec{A}(\vec{r^{\prime}}) = \frac{\mu}{4\pi} \frac{e^{-\jmath\be
 DIPOLO ELEMENTARE : $\vec{A}(\vec{r^{\prime}}) = \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} I_A \hat{z} \Delta{z}$
 
 Considero il caso $r >> \lambda$ ($r > 5 \lambda$ per esempio) e $\Delta{z} \to L/2$
-
-In campo lontano, localmente, posso considerare piana un'onda sferica.
-
-CAMPO LONTANO ($r >> \lambda$)
-
-$\begin{cases}\vec{E} \simeq\\
-\vec{H} \simeq\end{cases}$
