Finito capitolo schiere di antenne

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -41,6 +41,7 @@
 \usepackage[acronym]{glossaries}
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
 \newacronym[plural=AF,firstplural=Array Factor (AF)]{af}{AF}{Array Factor}
+\newacronym[plural=SLL,firstplural=Side Lobe Levels (SLL)]{sll}{SLL}{Side Lobe Level}
 
 % Costumization of theorem style
 \newtheoremstyle{theoremdd}% name of the style to be used
@@ -168,7 +169,7 @@
 		\vspace{0.5cm}
 		\emph{written with love by} \\
 		\vspace{0.5cm}
-		{\Large Andrea Pittaro0, Enrico Lovisotto, Umberto Martinelli}
+		{\Large Andrea Pittaro, Enrico Lovisotto, Umberto Martinelli}
 	\end{center}
 
 	\vfill
